Klaas zijn tekstje aangepast

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ verrassen en uitdagen, tot een complexe, meerlaagse harmonie.</p>
             <div class="how-it-work-item">
               <span class="number">3</span>
               <div class="how-it-work-body">
-                <h2>Zie hoe Klaas alles upfuckt</h2>
+                <h2>Zie hoe Klaas alles goed maakt en alles fout typt</h2>
                 <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt praesentium dicta consectetur fuga neque fugit a at. Cum quod vero assumenda iusto.</p>
                 <ul class="ul-check list-unstyled success">
                   <li class="text-white">Error minus sint nobis dolor</li>
