--- a/index.html
+++ b/index.html
@@ -307,6 +307,20 @@ verrassen en uitdagen, tot een complexe, meerlaagse harmonie.</p>
               </ul>
             </div>
           </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+            <div class="person">
+              <img src="images/imholz.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
+              <h3>Maurice Imholz</h3>
+              <p class="position text-muted">Co-Founder, President</p>
+              <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
+              <ul class="ul-social-circle">
+                <li><a href="#"><span class="icon-facebook"></span></a></li>
+                <li><a href="#"><span class="icon-twitter"></span></a></li>
+                <li><a href="#"><span class="icon-linkedin"></span></a></li>
+                <li><a href="#"><span class="icon-instagram"></span></a></li>
+              </ul>
+            </div>
+          </div>
         </div>
   </div>
 
