--- a/index.html
+++ b/index.html
@@ -67,20 +67,14 @@
                         <li><a href="#section-portfolio" class="nav-link">Portfolio</a></li>
                         <!--<li><a href="#section-blog" class="nav-link">Blog</a></li>-->
                         <li><a href="#section-contact" class="nav-link">Contact</a></li>
+                        <a href="https://www.facebook.com/improcommotie/" class="pl-0 pr-3"><span
+                                class="icon-facebook"></span></a>
                     </ul>
                 </nav>
             </div>
 
-
-            <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#"
-                                                                                                                class="site-menu-toggle js-menu-toggle"><span
-                    class="icon-menu h3"></span></a></div>
-
         </div>
-
     </div>
-    </div>
-
 </header>
 
 
@@ -142,10 +136,15 @@
                     <span class="number">1</span>
                     <div class="how-it-work-body">
                         <h2>Theatervoorstellingen</h2>
-                        <p class="mb-5">Het licht gaat aan, en daar staan een handjevol energieke mensen te popelen om te beginnen. Han, een van de spelers, doet een klapke met het publiek, en onthoudt: "museum!". Ingmar, de pianist, zet vlot een melodie in, en ze zijn vertrokken.
-                            In een mum van tijd schetsen de spelers een museumtafereel, in de vorm van een meerstemmig lied in met koddige danspasjes.
-                            Na het lied start al meteen de eerste scene - twee slapende bewakers en twee inbrekers die een schilderij komen stelen...
-                            Er volgt een vrolijke aaneenschakeling van scenes, liederen, abstracte dans, en voor we het weten eindigt de voorstelling in een bananenplantage op het zuidelijk halfrond.
+                        <p class="mb-5">Het licht gaat aan, en daar staan een handjevol energieke mensen te popelen om
+                            te beginnen. Han, een van de spelers, doet een klapke met het publiek, en onthoudt:
+                            "museum!". Ingmar, de pianist, zet vlot een melodie in, en ze zijn vertrokken.
+                            In een mum van tijd schetsen de spelers een museumtafereel, in de vorm van een meerstemmig
+                            lied in met koddige danspasjes.
+                            Na het lied start al meteen de eerste scene - twee slapende bewakers en twee inbrekers die
+                            een schilderij komen stelen...
+                            Er volgt een vrolijke aaneenschakeling van scenes, liederen, abstracte dans, en voor we het
+                            weten eindigt de voorstelling in een bananenplantage op het zuidelijk halfrond.
                     </div>
                 </div>
             </div>
@@ -555,117 +554,54 @@
     <!--</div>-->
     <!--</div>-->
 
-    <div class="site-section bg-light" id="section-contact">
+    <footer class="site-footer" id="section-contact">
         <div class="container">
-            <div class="row justify-content-center mb-5">
-                <div class="col-md-7 text-center border-primary">
-                    <h2 class="font-weight-light text-primary">Contacteer Ons</h2>
-                    <p class="color-black-opacity-5">See Our Daily News &amp; Updates</p>
-                </div>
-            </div>
             <div class="row">
-                <div class="col-md-7 mb-5">
-                    <div class="p-4 mb-3 bg-white">
-                        <p class="mb-0 font-weight-bold">Volg ons op facebook</p>
-                        <p class="mb-4"><a href="https://www.facebook.com/improcommotie/">https://www.facebook.com/improcommotie/</a>
-                        </p>
-
-                    </div>
+                <div class="col-md-3">
+                    <p class="footer-heading mb-0 font-weight-bold">Uitvalsbasis</p>
+                    <p class="mb-4">Leuven, BE</p>
                 </div>
-                <div class="col-md-5">
-
-                    <div class="p-4 mb-3 bg-white">
-                        <p class="mb-0 font-weight-bold">Uitvalsbasis</p>
-                        <p class="mb-4">Leuven, BE</p>
-
-                        <p class="mb-0 font-weight-bold">GSM</p>
-                        <p class="mb-4"><a href="#">+32 477 713 813</a></p>
-
-                        <p class="mb-0 font-weight-bold">Email Adres</p>
-                        <p class="mb-0"><a href="#">info@commotie.art</a></p>
-
-                    </div>
-
-                    <!--<div class="p-4 mb-3 bg-white">-->
-                    <!--<h3 class="h5 text-black mb-3">More Info</h3>-->
-                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad iure porro mollitia architecto hic consequuntur. Distinctio nisi perferendis dolore, ipsa consectetur? Fugiat quaerat eos qui, libero neque sed nulla.</p>-->
-                    <!--<p><a href="#" class="btn btn-primary px-4 py-2 text-white">Learn More</a></p>-->
-                    <!--</div>-->
-
+                <div class="col-md-3">
+                    <p class="footer-heading mb-0 font-weight-bold">GSM</p>
+                    <p class="mb-4"><a href="#">+32 477 713 813</a></p>
+                </div>
+                <div class="col-md-3">
+                    <p class="footer-heading mb-0 font-weight-bold">Email Adres</p>
+                    <p class="mb-0"><a href="#">info@commotie.art</a></p>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!---->
-    <!--<footer class="site-footer">-->
-    <!--<div class="container">-->
-    <!--<div class="row">-->
-    <!--<div class="col-md-9">-->
-    <!--<div class="row">-->
-    <!--<div class="col-md-5 mr-auto">-->
-    <!--<h2 class="footer-heading mb-4">Over Ons</h2>-->
-    <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam iure deserunt ut architecto dolores quo beatae laborum aliquam ipsam rem impedit obcaecati ea consequatur.</p>-->
-    <!--</div>-->
-    <!---->
-    <!--<div class="col-md-3">-->
-    <!--<h2 class="footer-heading mb-4">Quick Links</h2>-->
-    <!--<ul class="list-unstyled">-->
-    <!--<li><a href="#">Over Ons</a></li>-->
-    <!--<li><a href="#">Aanbod</a></li>-->
-    <!--<li><a href="#">Testimonials</a></li>-->
-    <!--<li><a href="#">Contact Us</a></li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--<div class="col-md-3">-->
-    <!--<h2 class="footer-heading mb-4">Follow Us</h2>-->
-    <!--<a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>-->
-    <!--<a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>-->
-    <!--<a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>-->
-    <!--<a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-md-3">-->
-    <!--<h2 class="footer-heading mb-4">Subscribe Newsletter</h2>-->
-    <!--<form action="#" method="post">-->
-    <!--<div class="input-group mb-3">-->
-    <!--<input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">-->
-    <!--<div class="input-group-append">-->
-    <!--<button class="btn btn-primary text-white" type="button" id="button-addon2">Send</button>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</form>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row pt-5 mt-5 text-center">-->
-    <!--<div class="col-md-12">-->
-    <!--<div class="border-top pt-5">-->
-    <!--<p>-->
-    <!--<small class="block">&copy; <script>document.write(new Date().getFullYear());</script> Commotie Free Template. All Rights Reserved. <br> Designed &amp; Developed by <a href="https://free-template.co/" target="_blank">Free-Template.co</a></small> -->
-    <!--</p>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!---->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</footer>-->
-    <!-- </div> -->
+        <div class="row pt-5 mt-5 text-center">
+            <div class="col-md-12">
+                <div class="border-top pt-5">
+                    <p>
+                        <small class="block">&copy;
+                            <script>document.write(new Date().getFullYear());</script>
+                            Commotie
+                        </small>
+                    </p>
+                </div>
+            </div>
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/bootstrap-datepicker.min.js"></script>
-    <script src="js/aos.js"></script>
+        </div>
+    </footer>
+</div>
 
-    <script src="js/main.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery-migrate-3.0.1.min.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/bootstrap-datepicker.min.js"></script>
+<script src="js/aos.js"></script>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
