--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <div class="owl-carousel nonloop-block-13">
             <div>
                 <a href="#" class="unit-1 text-center">
-                    <img src="images/group_photo.jpg" alt="Image" class="img-fluid" style="height: 544px">
+                    <img src="images/group_photo.jpg" alt="Image" class="image-popup img-fluid" style="height: 544px">
                     <div class="unit-1-text">
                         <h3 class="unit-1-heading">ImproXL</h3>
                     </div>
