--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
         <div class="owl-carousel nonloop-block-13">
             <div>
-                <a href="#" class="unit-1 text-center">
+                <a href="images/group_photo.jpg" class="image-popup unit-1 text-center">
                     <img src="images/group_photo.jpg" alt="Image" class="image-popup img-fluid" style="height: 544px">
                     <div class="unit-1-text">
                         <h3 class="unit-1-heading">ImproXL</h3>
@@ -386,7 +386,7 @@
             </div>
 
             <div>
-                <a href="#" class="unit-1 text-center">
+                <a href="images/kemphanen.jpg" class="image-popup unit-1 text-center">
                     <img src="images/kemphanen.jpg" alt="Image" class="img-fluid" style="height: 544px">
                     <div class="unit-1-text">
                         <h3 class="unit-1-heading">Kemphanen</h3>
