--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#d26e1b">
+
+    <link href="favicon.png" rel="icon">
+    <link href="apple-touch-icon.png" rel="apple-touch-icon">
 
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="200">
