Lorems removed and added practical info

--- a/index.html
+++ b/index.html
@@ -157,12 +157,11 @@
                     <span class="number">2</span>
                     <div class="how-it-work-body">
                         <h2>Voorstellingen op locatie</h2>
-                        <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt praesentium
-                            dicta consectetur fuga neque fugit a at. Cum quod vero assumenda iusto.</p>
+                        <p class="mb-5">Had je ons graag geboekt voor een optreden? Dat kan zeker! Voor ieder wat wils. Wij doen</p>
                         <ul class="ul-check list-unstyled success">
-                            <li class="text-white">Error minus sint nobis dolor</li>
-                            <li class="text-white">Voluptatum porro expedita labore esse</li>
-                            <li class="text-white">Voluptas unde sit pariatur earum</li>
+                            <li class="text-white">Kinderfeestjes</li>
+                            <li class="text-white">Volwassenfeestjes</li>
+                            <li class="text-white">Jong-volwassenfeestjes</li>
                         </ul>
                     </div>
                 </div>
@@ -173,12 +172,7 @@
                     <span class="number">3</span>
                     <div class="how-it-work-body">
                         <h2>Trainingen</h2>
-                        <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt praesentium
-                            dicta consectetur fuga neque fugit a at. Cum quod vero assumenda iusto.</p>
-                        <ul class="ul-check list-unstyled success">
-                            <li class="text-white">Error minus sint nobis dolor</li>
-                            <li class="text-white">Voluptatum porro expedita labore esse</li>
-                            <li class="text-white">Voluptas unde sit pariatur earum</li>
+                        <p class="mb-5">Had je graag een workshop voor je bedrijf of vriendengroep? Contacteer ons dan zeker. Dan maken we samen de workshop op uw maat.</p>
                         </ul>
                     </div>
                 </div>
@@ -225,14 +219,6 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-                <div class="person">
-                    <img src="images/goele.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
-                    <h3>Goedele Pyck</h3>
-                    <p class="position text-muted">De Filosoof</p>
-                    <p class="mb-4">"God is dood"</p>
-                </div>
-            </div>
 
             <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                 <div class="person">
@@ -278,14 +264,7 @@
                 </div>
             </div>
 
-            <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-                <div class="person">
-                    <img src="images/imholz.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
-                    <h3>Maurice Imholz</h3>
-                    <p class="position text-muted">De Metafoor</p>
-                    <p class="mb-4">"Is dat UW AUTO?" - De Beluga's</p>
-                </div>
-            </div>
+
         </div>
     </div>
 
@@ -497,19 +476,6 @@
                     </div>
                 </div>
 
-                <div>
-                    <div class="testimonial">
-                        <figure class="mb-4">
-                            <img src="images/person_5.jpg" alt="Image" class="img-fluid mb-3">
-                        </figure>
-                        <blockquote>
-                            <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde
-                                reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae
-                                illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-                            <p class="author"> &mdash; Jed Smith</p>
-                        </blockquote>
-                    </div>
-                </div>
 
             </div>
         </div>
