Added link to instragram

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                         <li><a href="#section-contact" class="nav-link">Contact</a></li>
                         <a href="https://www.facebook.com/improcommotie/" class="pl-0 pr-3"><span
                                 class="icon-facebook"></span></a>
+                        <a href="https://www.instagram.com/commotie_performance_art/" class="pl-0 pr-3"><span
+                                class="icon-instagram"></span></a>
+                        
                     </ul>
                 </nav>
             </div>
@@ -157,7 +160,7 @@
                     <span class="number">2</span>
                     <div class="how-it-work-body">
                         <h2>Voorstellingen op locatie</h2>
-                        <p class="mb-5">Had je ons graag geboekt voor een optreden? Dat kan zeker! Voor ieder wat wils. Wij doen</p>
+                        <p class="mb-5">Had je ons graag geboekt voor een optreden? Dat kan zeker! Voor ieder wat wils. Wij doen:</p>
                         <ul class="ul-check list-unstyled success">
                             <li class="text-white">Kinderfeestjes</li>
                             <li class="text-white">Volwassenfeestjes</li>
