Icons uploaded, but no idea how to implement them

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="text-white font-weight-light text-uppercase font-weight-bold" data-aos="fade-up">
                     <img width="500" src="images/logohorizontal.png">
                 </div>
-                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Sexy Performance Art Sexy</p>
+                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Musical Improv Theatre</p>
 
             </div>
         </div>
@@ -263,7 +263,7 @@
                     <img src="images/klaas.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Klaas Van den Broeck</h3>
                     <p class="position text-muted">Meta</p>
-                    <p class="mb-4">"Dit is niet écht!" - Cerberus, Lunetics, Preparee, et al.</p>
+                    <p class="mb-4">"Dit is niet écht!" - Preparee, Lunatics, Fairyfail, et al.</p>
                 </div>
             </div>
 
