Icons updated with font

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
 
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="fonts/icons/css/icons.css">    
 
 
     <link rel="stylesheet" href="css/aos.css">
@@ -283,7 +284,7 @@
             <div class="row align-items-stretch">
                 <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up">
                     <div class="unit-4 d-flex">
-                        <div class="unit-4-icon mr-4"><span class="text-primary flaticon-plane"></span></div>
+                        <div class="unit-4-icon mr-4"><span class="text-primary icon-lighting"></span></div>
                         <div>
                             <h3>Gezongen Gezegdes</h3>
                             <p>Ons beproefd format dat we ontwikkelden voor Kemphanen 2017</p>
@@ -293,7 +294,7 @@
                 </div>
                 <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="unit-4 d-flex">
-                        <div class="unit-4-icon mr-4"><span class="text-primary flaticon-boat-ship"></span></div>
+                        <div class="unit-4-icon mr-4"><span class="text-primary icon-stage"></span></div>
                         <div>
                             <h3>Lasagna</h3>
                             <p>Ons format met veel laagjes, ontwikkeld voor Kemphanen 2019</p>
@@ -303,7 +304,7 @@
                 </div>
                 <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="unit-4 d-flex">
-                        <div class="unit-4-icon mr-4"><span class="text-primary flaticon-truck"></span></div>
+                        <div class="unit-4-icon mr-4"><span class="text-primary icon-theater"></span></div>
                         <div>
                             <h3>Full On Musical</h3>
                             <p>We nemen jullie mee in 1 groot verhaal</p>
@@ -315,7 +316,7 @@
 
                 <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="unit-4 d-flex">
-                        <div class="unit-4-icon mr-4"><span class="text-primary flaticon-warehouse"></span></div>
+                        <div class="unit-4-icon mr-4"><span class="text-primary icon-scenery"></span></div>
                         <div>
                             <h3>Liedjes met structuur</h3>
                             <p>Een training waarin we de geheime structuren van onze liedjes uit de doeken doen.</p>
