--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     </div>
                 </div>
 
-                <div>
+<!--                 <div>
                     <div class="testimonial">
                         <figure class="mb-4">
                             <img src="images/person_4.jpg" alt="Image" class="img-fluid mb-3">
@@ -478,7 +478,7 @@
                             <p class="author"> &mdash; Ben Carson</p>
                         </blockquote>
                     </div>
-                </div>
+                </div> -->
 
 
             </div>
