--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="row align-items-stretch">
                 <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up">
                     <div class="unit-4 d-flex">
-                        <div class="unit-4-icon mr-4"><span class="text-primary icon-lighting"></span></div>
+                        <div class="unit-4-icon mr-4"><span class="text-primary ticon-lighting"></span></div>
                         <div>
                             <h3>Gezongen Gezegdes</h3>
                             <p>Ons beproefd format dat we ontwikkelden voor Kemphanen 2017</p>
@@ -287,7 +287,7 @@
                 </div>
                 <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="unit-4 d-flex">
-                        <div class="unit-4-icon mr-4"><span class="text-primary icon-stage"></span></div>
+                        <div class="unit-4-icon mr-4"><span class="text-primary ticon-stage"></span></div>
                         <div>
                             <h3>Lasagna</h3>
                             <p>Ons format met veel laagjes, ontwikkeld voor Kemphanen 2019</p>
@@ -297,7 +297,7 @@
                 </div>
                 <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="unit-4 d-flex">
-                        <div class="unit-4-icon mr-4"><span class="text-primary icon-theater"></span></div>
+                        <div class="unit-4-icon mr-4"><span class="text-primary ticon-theater"></span></div>
                         <div>
                             <h3>Full On Musical</h3>
                             <p>We nemen jullie mee in 1 groot verhaal</p>
@@ -309,7 +309,7 @@
 
                 <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="unit-4 d-flex">
-                        <div class="unit-4-icon mr-4"><span class="text-primary icon-scenery"></span></div>
+                        <div class="unit-4-icon mr-4"><span class="text-primary ticon-scenery"></span></div>
                         <div>
                             <h3>Liedjes met structuur</h3>
                             <p>Een training waarin we de geheime structuren van onze liedjes uit de doeken doen.</p>
