Fixed the with of mainlogo

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
                 <div class="text-white font-weight-light text-uppercase font-weight-bold" data-aos="fade-up">
-                    <img width="500" src="images/logohorizontal.png">
+                    <img max-width="500" width="100%" src="images/logohorizontal.png">
                 </div>
                 <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Musical Improv Theatre</p>
 
