--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
                 <div class="text-white font-weight-light text-uppercase font-weight-bold" data-aos="fade-up">
-                    <img max-width="500" width="100%" src="images/logohorizontal.png">
+                    <img max-width="500" width="100%"S src="images/logohorizontal.png">
                 </div>
                 <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Musical Improv Theatre</p>
 
@@ -123,7 +123,7 @@
 </div>
 
 <div class="site-section bg-image overlay" style="background-image: url('images/hero_bg_4.jpg');"
-     id="section-how-it-works">
+     id="section-how-it-works" flex-direction=column>
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-7 text-center border-primary">
@@ -136,7 +136,7 @@
                     <span class="number">1</span>
                     <div class="how-it-work-body">
                         <h2>Theatervoorstellingen</h2>
-                        <p class="mb-5">Het licht gaat aan, en daar staan een handjevol energieke mensen te popelen om
+                        <p class="mb-5" max-width="100%">Het licht gaat aan, en daar staan een handjevol energieke mensen te popelen om
                             te beginnen. Han, een van de spelers, doet een klapke met het publiek, en onthoudt:
                             "museum!". Ingmar, de pianist, zet vlot een melodie in, en ze zijn vertrokken.
                             In een mum van tijd schetsen de spelers een museumtafereel, in de vorm van een meerstemmig
@@ -154,7 +154,7 @@
                     <span class="number">2</span>
                     <div class="how-it-work-body">
                         <h2>Voorstellingen op locatie</h2>
-                        <p class="mb-5">Had je ons graag geboekt voor een optreden? Dat kan zeker! Voor ieder wat wils. Wij doen:</p>
+                        <p class="mb-5" max-width="100%">Had je ons graag geboekt voor een optreden? Dat kan zeker! Voor ieder wat wils. Wij doen:</p>
                         <ul class="ul-check list-unstyled success">
                             <li class="text-white">Kinderfeestjes</li>
                             <li class="text-white">Volwassenfeestjes</li>
@@ -169,7 +169,7 @@
                     <span class="number">3</span>
                     <div class="how-it-work-body">
                         <h2>Trainingen</h2>
-                        <p class="mb-5">Had je graag een workshop voor je bedrijf of vriendengroep? Contacteer ons dan zeker. Dan maken we samen de workshop op uw maat.</p>
+                        <p class="mb-5" max-width="100%">Had je graag een workshop voor je bedrijf of vriendengroep? Contacteer ons dan zeker. Dan maken we samen de workshop op uw maat.</p>
                         </ul>
                     </div>
                 </div>
