Fixed right pictures of testimony's

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="col-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                 <div class="how-it-work-item">
                     <span class="number">1</span>
-                    <div class="how-it-work-body">
+                    <div class="how-it-work-body" max-width="100%">
                         <h2>Theatervoorstellingen</h2>
                         <p class="mb-5" max-width="100%">Het licht gaat aan, en daar staan een handjevol energieke mensen te popelen om
                             te beginnen. Han, een van de spelers, doet een klapke met het publiek, en onthoudt:
