--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="col-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                 <div class="how-it-work-item">
                     <span class="number">1</span>
-                    <div class="how-it-work-body" max-width="100%">
+                    <div class="how-it-work-body">
                         <h2>Theatervoorstellingen</h2>
                         <p class="mb-5" max-width="100%">Het licht gaat aan, en daar staan een handjevol energieke mensen te popelen om
                             te beginnen. Han, een van de spelers, doet een klapke met het publiek, en onthoudt:
@@ -459,19 +459,17 @@
                     </div>
                 </div>
 
-<!--                 <div>
+                <div>
                     <div class="testimonial">
                         <figure class="mb-4">
-                            <img src="images/person_4.jpg" alt="Image" class="img-fluid mb-3">
+                            <img src="images/person_3.jpg" alt="Image" class="img-fluid mb-3">
                         </figure>
                         <blockquote>
-                            <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde
-                                reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae
-                                illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-                            <p class="author"> &mdash; Ben Carson</p>
+                            <p>&ldquo;Commotie slingerde me zonder enige moeite van de ene emotie de andere in. Vlotjes weefden ze geïmproviseerde liedjes in hun spel, het ene meezingbaar, een ander het muzikale equivalent van een koortsdroom, nog anderen rechtstreeks de lachspier prikkelend. Ronduit verbazend, onvergelijkbaar !.&rdquo;</p>
+                            <p class="author"> &mdash; Bram Van Kelst </p>
                         </blockquote>
                     </div>
-                </div> -->
+                </div>
 
 
             </div>
