Fixed mobile grids (fixed from 3 tiles to 1 tile per row)

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="100">
                 <div class="how-it-work-item">
                     <span class="number">1</span>
                     <div class="how-it-work-body">
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="col-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="200">
                 <div class="how-it-work-item">
                     <span class="number">2</span>
                     <div class="how-it-work-body">
@@ -164,7 +164,7 @@
                 </div>
             </div>
 
-            <div class="col-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="300">
                 <div class="how-it-work-item">
                     <span class="number">3</span>
                     <div class="how-it-work-body">
@@ -180,14 +180,14 @@
 </div>
 
 <div class="site-section border-bottom" id="section-our-team">
-    <div class="container">
+    <div class="container" >
         <div class="row justify-content-center mb-5">
             <div class="col-md-7 text-center border-primary">
                 <h2 class="font-weight-light text-primary" data-aos="fade">Onze Spelers</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="100">
                 <div class="person">
                     <img src="images/ingmar.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Ingmar Dasseville</h3>
@@ -197,7 +197,7 @@
                 </div>
             </div>
 
-            <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="100">
                 <div class="person">
                     <img src="images/freya.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Freya Dasseville</h3>
@@ -206,7 +206,7 @@
                 </div>
             </div>
 
-            <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="100">
                 <div class="person">
                     <img src="images/arthur.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Arthur Moelants</h3>
@@ -217,7 +217,7 @@
         </div>
         <div class="row">
 
-            <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="100">
                 <div class="person">
                     <img src="images/han.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Han van der Ven</h3>
@@ -225,7 +225,7 @@
                     <p class="mb-4"> "en trouwens en trouwens en trouwens" - KSWL, Swaajp, et al.</p>
                 </div>
             </div>
-            <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="200">
                 <div class="person">
                     <img src="images/ben.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Ben Verhoeven</h3>
@@ -233,7 +233,7 @@
                     <p class="mb-4"> "Ik had je nog nooit écht gezien" - Erlenmyr, Swaajp, et al.</p>
                 </div>
             </div>
-            <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="300">
                 <div class="person">
                     <img src="images/karen.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Karen Aerts</h3>
@@ -243,7 +243,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="100">
                 <div class="person">
                     <img src="images/janne.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Janne Van Laer</h3>
@@ -252,7 +252,7 @@
                 </div>
             </div>
 
-            <div class="col-3 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="300">
                 <div class="person">
                     <img src="images/klaas.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Klaas Van den Broeck</h3>
@@ -275,7 +275,7 @@
                 </div>
             </div>
             <div class="row align-items-stretch">
-                <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up">
+                <div class="col-12 col-md-3" data-aos="fade-up">
                     <div class="unit-4 d-flex">
                         <div class="unit-4-icon mr-4"><span class="text-primary ticon-lighting"></span></div>
                         <div>
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-12 col-md-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="unit-4 d-flex">
                         <div class="unit-4-icon mr-4"><span class="text-primary ticon-stage"></span></div>
                         <div>
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-12 col-md-3" data-aos="fade-up" data-aos-delay="200">
                     <div class="unit-4 d-flex">
                         <div class="unit-4-icon mr-4"><span class="text-primary ticon-theater"></span></div>
                         <div>
@@ -307,7 +307,7 @@
                 </div>
 
 
-                <div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-12 col-md-3" data-aos="fade-up" data-aos-delay="300">
                     <div class="unit-4 d-flex">
                         <div class="unit-4-icon mr-4"><span class="text-primary ticon-scenery"></span></div>
                         <div>
