--- a/index.html
+++ b/index.html
@@ -520,17 +520,13 @@
 </div>
     <footer class="site-footer" id="section-contact">
         <div class="container">
-            <div class="row">
+            <div class="row" justify-content= "center">
                 <div class="col-md-3">
                     <p class="footer-heading mb-0 font-weight-bold">Uitvalsbasis</p>
                     <p class="mb-4">Leuven, BE</p>
                 </div>
                 <div class="col-md-3">
-                    <p class="footer-heading mb-0 font-weight-bold">GSM</p>
-                    <p class="mb-4"><a href="#">+32 477 713 813</a></p>
-                </div>
-                <div class="col-md-3">
-                    <p class="footer-heading mb-0 font-weight-bold">Email Adres</p>
+                    <p class="footer-heading mb-0 font-weight-bold">E-mailadres</p>
                     <p class="mb-0"><a href="#">info@commotie.art</a></p>
                 </div>
             </div>
