--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                 <div class="how-it-work-item">
                     <span class="number">3</span>
                     <div class="how-it-work-body">
-                        <h2>Trainingen</h2>
-                        <p class="mb-5" max-width="100%">Had je graag een workshop voor je bedrijf of vriendengroep? Contacteer ons dan zeker. Dan maken we samen de workshop op uw maat.</p>
+                        <h2>Workshops</h2>
+                        <p class="mb-5" max-width="100%">Had je graag een workshop voor je bedrijf of vriendengroep? Contacteer ons dan zeker. Dan maken we samen de workshop op jouw maat.</p>
                         </ul>
                     </div>
                 </div>
@@ -520,7 +520,7 @@
 </div>
     <footer class="site-footer" id="section-contact">
         <div class="container">
-            <div class="row" justify-content= "center">
+            <div class="row">
                 <div class="col-md-3">
                     <p class="footer-heading mb-0 font-weight-bold">Uitvalsbasis</p>
                     <p class="mb-4">Leuven, BE</p>
