--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="description" content="De thuispagina van de musicalgroep Commotie"/>
+    <meta name="description" content="Commotie - Muzikaal Improvisatietheater"/>
     <meta name="keywords" content="Improvisation Theatre, Musical, Leuven, Improvisatie"/>
     <meta name="author" content="Commotie"/>
 
@@ -192,7 +192,7 @@
                     <img src="images/ingmar.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Ingmar Dasseville</h3>
                     <p class="position text-muted">Piano</p>
-                    <p class="mb-4">"Ik trek hier wel mijn plan achter de piano", jaarlijks 60+ impro-optredens doorheen
+                    <p class="mb-4">"Ik trek hier wel mijn plan achter de piano", jaarlijks 100+ impro-optredens doorheen
                         Vlaanderen</p>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                     <img src="images/ben.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Ben Verhoeven</h3>
                     <p class="position text-muted">De Spanningsboog</p>
-                    <p class="mb-4"> "Ik had je nog nooit écht gezien" - Erlenmyr, Swaajp, et al.</p>
+                    <p class="mb-4"> "Ik had je nog nooit écht gezien" - ERLNMYR, Swaajp, Prism, et al.</p>
                 </div>
             </div>
             <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="300">
@@ -238,7 +238,7 @@
                     <img src="images/karen.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Karen Aerts</h3>
                     <p class="position text-muted">De Disneyprinses</p>
-                    <p class="mb-4">"Oké we doen het!" - Preparee</p>
+                    <p class="mb-4">"Oké we doen het!" - Preparee, Terboenk</p>
                 </div>
             </div>
         </div>
@@ -368,7 +368,7 @@
                 <a href="images/kemphanen.jpg" class="image-popup unit-1 text-center">
                     <img src="images/kemphanen.jpg" alt="Image" class="img-fluid" style="height: 544px">
                     <div class="unit-1-text">
-                        <h3 class="unit-1-heading">Kemphanen</h3>
+                        <h3 class="unit-1-heading">Winnaar Kemphanen 2017</h3>
                     </div>
                 </a>
             </div>
