--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <li><a href="#section-contact" class="nav-link">Contact</a></li>
                         <a href="https://www.facebook.com/improcommotie/" class="pl-0 pr-3"><span
                                 class="icon-facebook"></span></a>
-                        <a href="https://www.instagram.com/commotie_performance_art/" class="pl-0 pr-3"><span
+                        <a href="https://www.instagram.com/commotie.art/" class="pl-0 pr-3"><span
                                 class="icon-instagram"></span></a>
                         
                     </ul>
@@ -89,7 +89,7 @@
                 <div class="text-white font-weight-light text-uppercase font-weight-bold" data-aos="fade-up">
                     <img max-width="500" width="100%"S src="images/logohorizontal.png">
                 </div>
-                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Musical Improv Theatre</p>
+                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Muzikaal Improvisatietheater</p>
 
             </div>
         </div>
