--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         <div class="unit-4-icon mr-4"><span class="text-primary ticon-lighting"></span></div>
                         <div>
                             <h3>Gezongen Gezegdes</h3>
-                            <p>Ons beproefd format dat we ontwikkelden voor Kemphanen 2017</p>
+                            <p>Eén spreekwoord inspireert een hele show!</p>
                             <!--<p><a href="#">Learn More</a></p>-->
                         </div>
                     </div>
@@ -289,8 +289,8 @@
                     <div class="unit-4 d-flex">
                         <div class="unit-4-icon mr-4"><span class="text-primary ticon-stage"></span></div>
                         <div>
-                            <h3>Lasagna</h3>
-                            <p>Ons format met veel laagjes, ontwikkeld voor Kemphanen 2019</p>
+                            <h3>Chaos in Fa Kruis</h3>
+                            <p>Een reis door de gedachtenstroom van onze acteurs</p>
                             <!--<p><a href="#">Learn More</a></p>-->
                         </div>
                     </div>
