--- a/index.html
+++ b/index.html
@@ -356,6 +356,14 @@
 
         <div class="owl-carousel nonloop-block-13">
             <div>
+                <a href="images/kemphanen2023.jpg" class="image-popup unit-1 text-center">
+                    <img src="images/kemphanen2023.jpg" alt="Image" class="img-fluid" style="height: 544px">
+                    <div class="unit-1-text">
+                        <h3 class="unit-1-heading">Winnaar Kemphanen 2023</h3>
+                    </div>
+                </a>
+            </div>
+            <div>
                 <a href="images/group_photo.jpg" class="image-popup unit-1 text-center">
                     <img src="images/group_photo.jpg" alt="Image" class="image-popup img-fluid" style="height: 544px">
                     <div class="unit-1-text">
