--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     is een voorliefde
                     voor muziek, snelheid, absurdisme, en energie.</p>
                 <p class="mb-5">De groep bevat spelers uit het (semi-) professionele improvisatiecircuit, theatrale
-                    spelers en comedians. Opgeteld hebben ze ruim 589 optredens op hun naam, waaronder intieme optredens
+                    spelers en comedians. Opgeteld hebben ze ruim 689 optredens op hun naam, waaronder intieme optredens
                     op maat, megashows voor 800 man, en corporate trainings/events.
                     Ze brengen elk hun stijl, routine en ervaring mee, waarmee de spelers elkaar blijven
                     verrassen en uitdagen, tot een complexe, meerlaagse harmonie.</p>
@@ -222,7 +222,7 @@
                     <img src="images/han.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Han van der Ven</h3>
                     <p class="position text-muted">De Stuiterbal</p>
-                    <p class="mb-4"> "en trouwens en trouwens en trouwens" - KSWL, Swaajp, et al.</p>
+                    <p class="mb-4"> "en trouwens en trouwens en trouwens" - KSWL, et al.</p>
                 </div>
             </div>
             <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="200">
@@ -355,6 +355,14 @@
         </div>
 
         <div class="owl-carousel nonloop-block-13">
+            <div>
+                <a href="images/improxl2024.jpg" class="image-popup unit-1 text-center">
+                    <img src="images/improxl2024.jpg" alt="Image" class="img-fluid" style="height: 544px">
+                    <div class="unit-1-text">
+                        <h3 class="unit-1-heading">ImproXL 2024</h3>
+                    </div>
+                </a>
+            </div>
             <div>
                 <a href="images/kemphanen2023.jpg" class="image-popup unit-1 text-center">
                     <img src="images/kemphanen2023.jpg" alt="Image" class="img-fluid" style="height: 544px">
