--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 <a href="images/group_photo.jpg" class="image-popup unit-1 text-center">
                     <img src="images/group_photo.jpg" alt="Image" class="image-popup img-fluid" style="height: 544px">
                     <div class="unit-1-text">
-                        <h3 class="unit-1-heading">ImproXL</h3>
+                        <h3 class="unit-1-heading">ImproXL 2018</h3>
                     </div>
                 </a>
             </div>
