--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
         <div class="row">
             <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="100">
                 <div class="person">
-                    <img src="images/janne.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
-                    <h3>Janne Van Laer</h3>
-                    <p class="position text-muted">De Plottwist</p>
-                    <p class="mb-4">"Ik doe de krab!" - Preparee</p>
+                    <img src="images/emma.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
+                    <h3>Emma Verlinden</h3>
+                    <p class="position text-muted">Puppy-eyes</p>
+                    <p class="mb-4">"Quote"</p>
                 </div>
             </div>
 
@@ -261,6 +261,14 @@
                 </div>
             </div>
 
+            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="300">
+                <div class="person">
+                    <img src="images/leonie.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
+                    <h3>Leonie Van Gerven</h3>
+                    <p class="position text-muted">Meta</p>
+                    <p class="mb-4">Saus, Preparee</p>
+                </div>
+            </div>
 
         </div>
     </div>
