--- a/index.html
+++ b/index.html
@@ -107,14 +107,13 @@
                 <div class="text-left pb-1 border-primary mb-4">
                     <h2 class="text-primary">Over Ons</h2>
                 </div>
-                <p>Commotie is een collectief van ervaren improspelers met verschillende achtergronden. Wat hen verbindt
-                    is een voorliefde
-                    voor muziek, snelheid, absurdisme, en energie.</p>
-                <p class="mb-5">De groep bevat spelers uit het (semi-) professionele improvisatiecircuit, theatrale
-                    spelers en comedians. Opgeteld hebben ze ruim 689 optredens op hun naam, waaronder intieme optredens
-                    op maat, megashows voor 800 man, en corporate trainings/events.
-                    Ze brengen elk hun stijl, routine en ervaring mee, waarmee de spelers elkaar blijven
-                    verrassen en uitdagen, tot een complexe, meerlaagse harmonie.</p>
+                <p>Commotie brengt muzikaal improvisatietheater dat verrast, ontroert en doet lachen.
+                    Met niets meer dan een instrument, een idee en een publiek bouwen we ter plekke een unieke voorstelling. 
+                    Geen script, geen voorbereiding. Alleen muziek, spel en een flinke dosis lef.
+                    Het publiek geeft de eerste vonk — wij maken er een muzikaal vuurwerk van.
+                </p>
+                <p class="mb-5">
+                </p>
 
             </div>
 
