--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                     <div class="unit-4 d-flex">
                         <div class="unit-4-icon mr-4"><span class="text-primary ticon-theater"></span></div>
                         <div>
-                            <h3>Full On Musical</h3>
-                            <p>We nemen jullie mee in 1 groot verhaal</p>
+                            <h3>Weet je nog die liedjes?</h3>
+                            <p>Een melodie, een herinnering, een sprankeltje kinderlijke fantasie. </p>
                             <!--<p><a href="#">Learn More</a></p>-->
                         </div>
                     </div>
