--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
         <div class="row justify-content-center mb-5">
             <div class="col-md-7 text-center border-primary">
                 <h2 class="font-weight-light text-primary" data-aos="fade">Onze Spelers</h2>
+                <p>Commotie bestaat uit een bont gezelschap van muzikanten en improvisatiespelers.
+Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band en een cast die elke avond een ander verhaal tot leven brengt.</p>
             </div>
         </div>
         <div class="row">
