--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <span class="number">3</span>
                     <div class="how-it-work-body">
                         <h2>Workshops</h2>
-                        <p class="mb-5" max-width="100%">Had je graag een workshop voor je bedrijf of vriendengroep? Contacteer ons dan zeker. Dan maken we samen de workshop op jouw maat.</p>
+                        <p class="mb-5" max-width="100%">Had je graag een workshop voor je improgroep? Contacteer ons dan zeker. Dan maken we samen de workshop op jouw maat.</p>
                         </ul>
                     </div>
                 </div>
@@ -193,8 +193,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                     <img src="images/ingmar.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Ingmar Dasseville</h3>
                     <p class="position text-muted">Piano</p>
-                    <p class="mb-4">"Ik trek hier wel mijn plan achter de piano", jaarlijks 100+ impro-optredens doorheen
-                        Vlaanderen</p>
+                    <p class="mb-4">"Ik trek hier wel mijn plan achter de piano"</p>
                 </div>
             </div>
 
@@ -203,7 +202,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                     <img src="images/freya.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Freya Dasseville</h3>
                     <p class="position text-muted">Basgitaar</p>
-                    <p class="mb-4">"dum dum dum" - Fawn, Papiloon, The Pixels, et al.</p>
+                    <p class="mb-4">"Dum dum dum"</p>
                 </div>
             </div>
 
@@ -212,7 +211,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                     <img src="images/arthur.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Arthur Moelants</h3>
                     <p class="position text-muted">Percussie</p>
-                    <p class="mb-4">"boem boem baf" - Fawn, et al.</p>
+                    <p class="mb-4">"Boem boem baf"</p>
                 </div>
             </div>
         </div>
@@ -223,7 +222,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                     <img src="images/han.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Han van der Ven</h3>
                     <p class="position text-muted">De Stuiterbal</p>
-                    <p class="mb-4"> "en trouwens en trouwens en trouwens" - KSWL, et al.</p>
+                    <p class="mb-4"> "En trouwens, en trouwens, en trouwens"</p>
                 </div>
             </div>
             <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="200">
@@ -231,7 +230,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                     <img src="images/ben.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Ben Verhoeven</h3>
                     <p class="position text-muted">De Spanningsboog</p>
-                    <p class="mb-4"> "Ik had je nog nooit écht gezien" - ERLNMYR, Swaajp, Prism, et al.</p>
+                    <p class="mb-4">"Ik had je nog nooit écht gezien."</p>
                 </div>
             </div>
             <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="300">
@@ -239,7 +238,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                     <img src="images/karen.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Karen Aerts</h3>
                     <p class="position text-muted">De Disneyprinses</p>
-                    <p class="mb-4">"Oké we doen het!" - Preparee, Terboenk</p>
+                    <p class="mb-4">"Oké we doen het!"</p>
                 </div>
             </div>
         </div>
@@ -248,7 +247,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                 <div class="person">
                     <img src="images/emma.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Emma Verlinden</h3>
-                    <p class="position text-muted">Puppy-eyes</p>
+                    <p class="position text-muted">De Eerlijkheid</p>
                     <p class="mb-4">"Quote"</p>
                 </div>
             </div>
@@ -258,7 +257,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                     <img src="images/klaas.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Klaas Van den Broeck</h3>
                     <p class="position text-muted">Meta</p>
-                    <p class="mb-4">"Dit is niet écht!" - Preparee, Lunatics, Fairyfail, et al.</p>
+                    <p class="mb-4">"Dit is niet écht!"</p>
                 </div>
             </div>
 
@@ -266,8 +265,8 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                 <div class="person">
                     <img src="images/leonie.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Leonie Van Gerven</h3>
-                    <p class="position text-muted">Meta</p>
-                    <p class="mb-4">Saus, Preparee</p>
+                    <p class="position text-muted"></p>
+                    <p class="mb-4">"Quote"</p>
                 </div>
             </div>
 
