--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </header>
 
 
-<div class="site-blocks-cover overlay" style="background-image: url(images/kemphanen.jpg);" data-aos="fade"
+<div class="site-blocks-cover overlay" style="background-image: url(images/groep.jpg);" data-aos="fade"
      data-stellar-background-ratio="0.5" id="section-home">
     <div class="container">
         <div class="row align-items-center justify-content-center text-center">
