--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </header>
 
 
-<div class="site-blocks-cover overlay" style="background-image: url(images/groep.jpg);" data-aos="fade"
+<div class="site-blocks-cover overlay" style="background-image: url(images/kemphanen.jpg);" data-aos="fade"
      data-stellar-background-ratio="0.5" id="section-home">
     <div class="container">
         <div class="row align-items-center justify-content-center text-center">
@@ -115,63 +115,6 @@
                 <p class="mb-5">
                 </p>
 
-            </div>
-
-        </div>
-    </div>
-</div>
-
-<div class="site-section bg-image overlay" style="background-image: url('images/hero_bg_4.jpg');"
-     id="section-how-it-works" flex-direction=column>
-    <div class="container">
-        <div class="row justify-content-center mb-5">
-            <div class="col-md-7 text-center border-primary">
-                <h2 class="font-weight-light text-primary" data-aos="fade">Wat doen we?</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="100">
-                <div class="how-it-work-item">
-                    <span class="number">1</span>
-                    <div class="how-it-work-body">
-                        <h2>Theatervoorstellingen</h2>
-                        <p class="mb-5" max-width="100%">Het licht gaat aan, en daar staan een handjevol energieke mensen te popelen om
-                            te beginnen. Han, een van de spelers, doet een klapke met het publiek, en onthoudt:
-                            "museum!". Ingmar, de pianist, zet vlot een melodie in, en ze zijn vertrokken.
-                            In een mum van tijd schetsen de spelers een museumtafereel, in de vorm van een meerstemmig
-                            lied in met koddige danspasjes.
-                            Na het lied start al meteen de eerste scene - twee slapende bewakers en twee inbrekers die
-                            een schilderij komen stelen...
-                            Er volgt een vrolijke aaneenschakeling van scenes, liederen, abstracte dans, en voor we het
-                            weten eindigt de voorstelling in een bananenplantage op het zuidelijk halfrond.
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="200">
-                <div class="how-it-work-item">
-                    <span class="number">2</span>
-                    <div class="how-it-work-body">
-                        <h2>Voorstellingen op locatie</h2>
-                        <p class="mb-5" max-width="100%">Had je ons graag geboekt voor een optreden? Dat kan zeker! Voor ieder wat wils. Wij doen:</p>
-                        <ul class="ul-check list-unstyled success">
-                            <li class="text-white">Kinderfeestjes</li>
-                            <li class="text-white">Volwassenfeestjes</li>
-                            <li class="text-white">Jong-volwassenfeestjes</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-4" data-aos="fade" data-aos-delay="300">
-                <div class="how-it-work-item">
-                    <span class="number">3</span>
-                    <div class="how-it-work-body">
-                        <h2>Workshops</h2>
-                        <p class="mb-5" max-width="100%">Had je graag een workshop voor je improgroep? Contacteer ons dan zeker. Dan maken we samen de workshop op jouw maat.</p>
-                        </ul>
-                    </div>
-                </div>
             </div>
 
         </div>
@@ -315,16 +258,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                 </div>
 
 
-                <div class="col-12 col-md-3" data-aos="fade-up" data-aos-delay="300">
-                    <div class="unit-4 d-flex">
-                        <div class="unit-4-icon mr-4"><span class="text-primary ticon-scenery"></span></div>
-                        <div>
-                            <h3>Liedjes met structuur</h3>
-                            <p>Een training waarin we de geheime structuren van onze liedjes uit de doeken doen.</p>
-                            <!--<p><a href="#">Learn More</a></p>-->
-                        </div>
-                    </div>
-                </div>
+
                 <!--<div class="col-3 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="400">-->
                 <!--<div class="unit-4 d-flex">-->
                 <!--<div class="unit-4-icon mr-4"><span class="text-primary flaticon-wooden"></span></div>-->
