--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
                 <div class="person">
                     <img src="images/leonie.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
                     <h3>Leonie Van Gerven</h3>
-                    <p class="position text-muted"></p>
+                    <p class="position text-muted">Het showbeest</p>
                     <p class="mb-4">"Quote"</p>
                 </div>
             </div>
@@ -222,7 +222,7 @@ Elk van ons brengt zijn eigen klank en karakter mee — samen vormen we een band
             <div class="row justify-content-center mb-5" data-aos="fade-up">
                 <div class="col-md-7 text-center border-primary">
                     <h2 class="mb-0 text-primary">Ons Aanbod</h2>
-                    <p class="color-black-opacity-5">Onze beproefde shows en trainingen</p>
+                    <p class="color-black-opacity-5">Onze beproefde voorstellingen</p>
                 </div>
             </div>
             <div class="row align-items-stretch">
